> 07/02/2024 Messages are now encrypted. List command for client users added. New design for main panel. Client panel design modified. Preferences folder added to git. Bug fixes. Server closed, and users connections messages added. Shortcut on password fields on Main frame to connect and create server added.